# mindsetr-notes

./: .env.example  .flake8  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: lint.yml  test.yml
migrations/: README.md  env.py
migrations/versions/: 5b6d23ea72e9_initial_migration.py
notes_backend/: database.py  main.py
notes_backend/crud/: __init__.py  note.py
notes_backend/models/: __init__.py  enums.py  notes.py
notes_backend/routers/: notes.py
notes_backend/schemas/: __init__.py  note.py
notes_backend/services/: notes.py
tests/: conftest.py  test_health.py  test_notes.py
